tests/conformance/typecheck/valid/ignore_non_unit.ks
fun double(x: Int): Int = x * 2

val _ = {
  ignore double(21)
}
