tests/conformance/typecheck/invalid/function_arg_type_mismatch.ks
// Function argument type mismatch
fun double(x: Int): Int = x * 2
val x = double(True)
